...
    @IBOutlet weak var areaPicker: UIPickerView!
    
    @IBOutlet weak var depthText: UITextField!
    @IBOutlet weak var depthPicker: UIPickerView!
    
    // choiecs
    let area = ["Software Engineering", "Algorithms and Theory", "Computer Systems, Networks and Security", "Databases and Data Mining", "Bioinformatics", "Artificial Intelligence"]
    let depth = ["0", "1", "2", "3", ">=4"]
    
    func numberOfComponents(in pickerView: UIPickerView) -> Int {
        return 1
    }
    
...
